# teloxide_test

./: Cargo.toml  README.md
src/: bot.rs  constants.rs  lib.rs  main.rs
src/global_variables/compile_time/: git_info.rs
src/global_variables/runtime/: git_info_without_lifetimes.rs  mod.rs
src/helpers/: git_info.rs
src/once_cell_globals/: git_info.rs
