[package]
edition = "2021"
name = "tufa_telegram_bot"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
teloxide = {version = "0.8", features = ["macros", "auto-send"]}
tokio = {version = "1.8", features = ["rt-multi-thread", "macros"]}
