[package]
edition = "2021"
name = "tufa_telegram_bot"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
once_cell = "1.16.0"
pretty_env_logger = "0.4"
teloxide = {version = "0.11", features = ["macros", "auto-send"]}
tokio = {version = "1.8", features = ["rt-multi-thread", "macros"]}
reqwest = {version = "0.11.0", default-features = false, features = ["json", "blocking", "rustls-tls", "cookies", "gzip", "brotli", "deflate", "trust-dns", "native-tls", "multipart", "stream", "cookies"]}
serde = {version = "1.0", features = ["derive"]}
serde-aux = "4.0.0"
serde-xml-rs = "0.6.0"
serde_derive = "1.0"
serde_json = "1.0"
# tufa_common = {git = "https://github.com/kuqmua/tufa_common"}# git version
compile_time_git_info = {path = "../proc_macros/compile_time_git_info"}
tufa_common = {path = "../tufa_common"}# local dev test without commits version
user_port_try_from_u16 = {path = "../proc_macros/user_port_try_from_u16"}
