[package]
edition = "2021"
name = "tufa_telegram_bot"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = {version = "=0.4"}
pretty_env_logger = {version = "=0.4"}
teloxide = {version = "=0.11", features = ["macros", "auto-send"]}
tokio = {version = "=1.29.1", features = ["rt-multi-thread", "macros"]}
reqwest = {version = "=0.11.17", default-features = false, features = ["json", "blocking", "rustls-tls", "cookies", "gzip", "brotli", "deflate", "trust-dns", "native-tls", "multipart", "stream", "cookies"]}
serde = {version = "=1.0", features = ["derive"]}
serde-aux = {version = "=4.0.0"}
serde-xml-rs = {version = "=0.6.0"}
serde_derive = {version = "=1.0"}
serde_json = {version = "=1.0"}
# tufa_common = {git = "https://github.com/kuqmua/tufa_common"}# git version
compile_time_git_info = {path = "../proc_macros/compile_time_git_info"}
tufa_common = {path = "../tufa_common"}# local dev test without commits version
user_port_try_from_u16 = {path = "../proc_macros/user_port_try_from_u16"}
